fixed alignment to px

--- a/code/express/public/stylesheets/menubar_style.css
+++ b/code/express/public/stylesheets/menubar_style.css
@@ -1,8 +1,8 @@
 
-#header_image{position:fixed; top:20px; width:175px;}
-#header_quote{position:fixed; top:20px; width:100%; text-align:center;}
-.header_menu{position:fixed; top:60px; }
-	.menuright{position:fixed; top:60px; right:10px;}
+#header_image{position:fixed; top:10px; width:175px;}
+#header_quote{position:fixed; top:10px; width:100%; text-align:center;}
+.header_menu{position:fixed; top:50px; }
+	.menuright{position:fixed; top:50px; right:10px;}
 
 //later in their settings load their own styles.
 //defaults styles will be in teh style.css
