--- a/code/express/public/stylesheets/style.css
+++ b/code/express/public/stylesheets/style.css
@@ -9,7 +9,7 @@ overflow-y: auto;
 .contentview{
 	  text-align:left;
 	  position: fixed;
-	top:100px;	
+	top:90px;	
 	height:80%;
 	overflow-y: auto;	
 	  left: 7%;
